# election-methods

./: CMakeLists.txt  election_logic.cpp  election_logic.hpp  main.cpp  test.cpp
.github/workflows/: ci.yml
